--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,17 +1,20 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
+	<form action="{{ path('app_login') }}" method="post">
+    <label for="username">Nom d'utilisateur :</label>
+    <input type="text" id="username" name="_username" value="{{ last_username }}"/>
+
+    <label for="password">Mot de passe :</label>
+    <input type="password" id="password" name="_password"/>
+
+    <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+
     {% if error %}
-        <div class="alert alert-danger" role="alert">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+        <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
     {% endif %}
 
-    <form action="{{ path('login_check') }}" method="post">
-        <label for="username">Nom d'utilisateur :</label>
-        <input type="text" id="username" name="_username" value="{{ last_username }}" />
+    <button class="btn btn-success" type="submit">Se connecter</button>
+</form>
 
-        <label for="password">Mot de passe :</label>
-        <input type="password" id="password" name="_password" />
-
-        <button class="btn btn-success" type="submit">Se connecter</button>
-    </form>
 {% endblock %}
