--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -15,6 +15,10 @@
     {% endif %}
 
     <button class="btn btn-success" type="submit">Se connecter</button>
+     {# Lien pour mot de passe oublié #}
+        <div class="mt-3">
+            <a href="{{ path('app_forgot_password') }}">Mot de passe oublié ?</a>
+        </div>
 </form>
 
 {% endblock %}
