last work on fonctionnal and unit test

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,7 +15,9 @@
 		</title>
 
 		<!-- Bootstrap Core CSS -->
-		<link href="{{ asset('css/bootstrap.min.css') }}" rel="stylesheet"> {% block css %}{% endblock %}
+		<link href="{{ asset('css/bootstrap.min.css') }}" rel="stylesheet"> {% block css %}
+		<link href="{{ asset('css/shop-homepage.css') }}" rel="stylesheet">
+		{% endblock %}
 
 		</head>
 
