--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,86 +15,90 @@
 		</title>
 
 		<!-- Bootstrap Core CSS -->
-		<link href="{{ asset('css/bootstrap.min.css') }}" rel="stylesheet"> {% block css %}
-		<link href="{{ asset('css/shop-homepage.css') }}" rel="stylesheet">
+		<link href="{{ asset('css/bootstrap.min.css') }}" rel="stylesheet">
+		{% block css %}
+			<link href="{{ asset('css/shop-homepage.css') }}" rel="stylesheet">
 		{% endblock %}
 
-		</head>
+	</head>
 
-		<body>
-			<nav class="navbar navbar-light navbar-fixed-top" style="background-color: #e3f2fd;" role="navigation">
-				<div class="container">
-					<div class="navbar-header">
-						<a class="navbar-brand" href="/">To Do List app</a>
-
-						<img src="{{ asset('img/Logo_OpenClassrooms.webp') }}" alt="OpenClassrooms" width="80" height="50"/>
-					</div>
-				</div>
-			</nav>
-
-			<!-- Page Content -->
+	<body>
+		<nav class="navbar navbar-light navbar-fixed-top" style="background-color: #e3f2fd;" role="navigation">
 			<div class="container">
-				<div class="row">
-					<a href="{{ path('app_user_create') }}" class="btn btn-primary">Créer un utilisateur</a>
+				<div class="navbar-header">
+					<a class="navbar-brand" href="/">To Do List app</a>
 
-					{% if app.user %}
-						<a href="{{ path('app_logout') }}" class="pull-right btn btn-danger" onclick="event.preventDefault(); document.getElementById('logout-form').submit();">
-							Se déconnecter
-						</a>
-						<form id="logout-form" action="{{ path('app_logout') }}" method="post" style="display: none;">
-							<input type="hidden" name="_csrf_token" value="{{ csrf_token('logout') }}">
-						</form>
-					{% else %}
-						<a href="{{ path('app_login') }}" class="btn btn-success">Se connecter</a>
-					{% endif %}
+					<img src="{{ asset('img/Logo_OpenClassrooms.webp') }}" alt="OpenClassrooms" width="80" height="50"/>
 				</div>
+			</div>
+		</nav>
 
-				<div class="row">
-					<div class="col-md-12">
-						{% for flash_message in app.session.flashBag.get('success') %}
-							<div class="alert alert-success" role="alert">
-								<strong>Superbe !</strong>
-								{{ flash_message }}
-							</div>
-						{% endfor %}
+		<!-- Page Content -->
+		<div class="container">
+			<div class="row">
+				<a href="{{ path('app_user_create') }}" class="btn btn-primary">Créer un utilisateur</a>
 
-						{% for flash_message in app.session.flashBag.get('error') %}
-							<div class="alert alert-danger" role="alert">
-								<strong>Oops !</strong>
-								{{ flash_message }}
-							</div>
-						{% endfor %}
+				{% if app.user %}
+					{# Afficher le bouton pour éditer le profil uniquement si l'utilisateur est connecté #}
 
-						{% block header_title %}{% endblock %}
-						{% block header_img %}<img class="slide-image" src="{{ asset('img/todolist_homepage.webp') }}" alt="todo list" loading="lazy" width="800" height="600">
-						{% endblock %}
+					<a href="{{ path('app_user_edit', {id: app.user.id}) }}" class="btn btn-primary mt-3">Modifier mon profil</a>
+
+					<a href="{{ path('app_logout') }}" class="pull-right btn btn-danger" onclick="event.preventDefault(); document.getElementById('logout-form').submit();">
+						Se déconnecter
+					</a>
+					<form id="logout-form" action="{{ path('app_logout') }}" method="post" style="display: none;">
+						<input type="hidden" name="_csrf_token" value="{{ csrf_token('logout') }}">
+					</form>
+				{% else %}
+					<a href="{{ path('app_login') }}" class="btn btn-success">Se connecter</a>
+				{% endif %}
+			</div>
+
+			<div class="row">
+				<div class="col-md-12">
+					{% for flash_message in app.session.flashBag.get('success') %}
+						<div class="alert alert-success" role="alert">
+							<strong>Superbe !</strong>
+							{{ flash_message }}
+						</div>
+					{% endfor %}
+
+					{% for flash_message in app.session.flashBag.get('error') %}
+						<div class="alert alert-danger" role="alert">
+							<strong>Oops !</strong>
+							{{ flash_message }}
+						</div>
+					{% endfor %}
+
+					{% block header_title %}{% endblock %}
+					{% block header_img %}<img class="slide-image" src="{{ asset('img/todolist_homepage.webp') }}" alt="todo list" loading="lazy" width="800" height="600">
+					{% endblock %}
+				</div>
+			</div>
+			<br/>
+
+			<div class="row">
+				<div class="col-md-12"> {% block body %}{% endblock %}
 					</div>
 				</div>
-				<br/>
+			</div>
+			<!-- /.container -->
 
-				<div class="row">
-					<div class="col-md-12"> {% block body %}{% endblock %}
+			<div class="container">
+
+				<hr>
+				<footer>
+					<div class="row">
+						<div class="col-lg-12">
+							<p class="pull-right">Copyright &copy; OpenClassrooms</p>
 						</div>
 					</div>
-				</div>
-				<!-- /.container -->
+				</footer>
 
-				<div class="container">
+			</div>
 
-					<hr>
-					<footer>
-						<div class="row">
-							<div class="col-lg-12">
-								<p class="pull-right">Copyright &copy; OpenClassrooms</p>
-							</div>
-						</div>
-					</footer>
-
-				</div>
-
-				<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-				<script src="{{ asset('js/bootstrap.min.js') }}"></script>
-			</body>
-		</html>
-	</body>
-</html>
+			<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+			<script src="{{ asset('js/bootstrap.min.js') }}"></script>
+		</body>
+	</html>
+</body></html>
